# yt-dlp-gui

./: .gitignore  CMakeLists.txt  README.md
dependencies/ImGuiFileDialog/: ImGuiFileDialog.h  ImGuiFileDialogConfig.h
dependencies/imgui/: imgui.h
dependencies/imgui/backend/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.h
src/: main.cpp  style.h
src/gui/: gui.cpp  gui.h
src/utils/: utils.h
